Adds bibliography configuration for `references.bib`.

--- a/main.tex
+++ b/main.tex
@@ -365,6 +365,7 @@ automatically add a sentence pointing to the information on-line:
 %% Notice that the class file automatically sets \bibliographystyle
 %% and also names the section correctly.
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\bibliography{achemso-demo}
+% \bibliography{achemso-demo}
+\bibliography{references}
 
 \end{document}
